--- a/hotel/hotel/Gemfile
+++ b/hotel/hotel/Gemfile
@@ -25,7 +25,12 @@ gem 'devise'
 gem 'simple_form'
 gem 'carrierwave'
 gem  'mini_magick'
-
+group :development, :test do
+  gem 'rspec-rails', '~> 3.0.0.beta'
+  gem 'factory_girl_rails'
+  gem 'shoulda-matchers'
+  gem 'capybara'
+end
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
